[gd_scene load_steps=2 format=3 uid="uid://drinwadyfnype"]

[ext_resource type="Script" uid="uid://drhv6ohvw4pn4" path="res://Scripts/Events/event_10.gd" id="1_o22lu"]

[node name="Event10" type="Node2D"]
script = ExtResource("1_o22lu")

[node name="AdvisorSprite" type="Sprite2D" parent="."]

[node name="DialoguePanel" type="Panel" parent="."]
offset_left = 523.0
offset_top = 794.0
offset_right = 1473.0
offset_bottom = 1133.0

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -127.5
offset_right = 408.5
offset_bottom = 127.5
grow_horizontal = 2
grow_vertical = 2

[node name="DecisionPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 531.0
offset_top = 575.0
offset_right = 1471.0
offset_bottom = 789.0
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="DecisionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -33.0
offset_right = 82.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuarantineButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Folket kan ikke bare valse rundt med sykdom i omløp. Sett dem i karantene!"

[node name="VaccinateButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Den eneste løsningen på en pandemi er vaksiner. Vaksiner folket!"

[node name="IgnoreButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Sykdom går over av seg selv. Vi trenger ikke gjøre noe."

[node name="InformButton" type="Button" parent="DecisionPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Folket må selv løse problemet, men vi kan hjelpe dem med informasjon."

[node name="FerdigKnapp" type="Button" parent="DecisionPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -84.5
offset_right = 136.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Ferdig"

[connection signal="pressed" from="DecisionPanel/VBoxContainer/QuarantineButton" to="." method="_on_quarantine_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/VaccinateButton" to="." method="_on_vaccinate_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/IgnoreButton" to="." method="_on_ignore_button_pressed"]
[connection signal="pressed" from="DecisionPanel/VBoxContainer/InformButton" to="." method="_on_inform_button_pressed"]
[connection signal="pressed" from="DecisionPanel/FerdigKnapp" to="." method="_on_ferdig_knapp_pressed"]
